--- a/sistemaManutencao/src/main/resources/templates/delete.html
+++ b/sistemaManutencao/src/main/resources/templates/delete.html
@@ -24,7 +24,7 @@
 
       <p>
         Tem certeza que deseja excluir a OS
-        <strong th:text="${manutencao.title}"></strong>?
+        <strong th:text="${manutencao.item}"></strong>?
       </p>
 
       <form method="post">
